removing cruft