@@ -5,17 +5,16 @@ export LSCOLORS="exfxcxdxbxegedabagacad"
 export LS_COLORS='di=34;40:ln=35;40:so=32;40:pi=33;40:ex=31;40:bd=34;46:cd=34;43:su=0;41:sg=0;46:tw=0;42:ow=0;43:'
 export GREP_COLOR='1;33'
 export DYLD_LIBRARY_PATH=$DYLD_LIBRARY_PATH:/usr/local/mysql/lib/
-export JAVA_OPTS="-server -Xms256m -Xmx1024m -XX:PermSize=384m"
-#export GPGKEY=B621B2CE
-export MAVEN_OPTS="$JAVA_OPTS -Dorg.apache.jasper.compiler.Parser.STRICT_QUOTE_ESCAPING=false"
 
 #editor
 if [[ -n $SSH_CONNECTION ]]; then
-  export EDITOR='emacs -nw'
+  export EDITOR='emacsclient -nw'
 else
   if [[ $TERM == "xterm" || $TERM == "xterm-color" || $TERM == "rxvt" ]]; then
-    alias EDITOR='emacs -nw'
+    alias EDITOR='emacsclient -nw'
   else
-    alias EDITOR='emacs -nw'
+    alias EDITOR='emacsclient -nw'
   fi
 fi
+
+export PATH=$PATH;/snap/bin
